2009-05-18  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Arek

	* flumotion/component/misc/httpserver/httpfile.py:
	Fixes #1280. Http-server not checking if a byte range request has an end
	range bigger than the filesize.

2009-05-18  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/playlist/playlist.py:
	Prefer legacyresample over audioresample where available.

2009-05-18  Arek Korbik  <arkadini@gmail.com>

	reviewed by: Zaheer

	* flumotion/component/misc/httpserver/httpserver.py
	  (HTTPFileStreamer._timeoutRequests):
	Cleanup the _timeoutRequestsCallLater on entry. See #1281.

2009-05-18  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/base/http.py:
	Log the return code when handling unauthorized connections. It doesn't
	always have to be 401, sometimes it can be 500 if the bouncer had an
	error.

2009-05-13  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Julien Le Goff

	* flumotion/admin/gtk/componentlist.py:
	Added two methods to append and remove components incrementally to and
	from the componentlist used by the admin window.

	* flumotion/admin/gtk/adminwindow.py:
	Changed the algorithm used for updating the componentlist. Before it
	was extremelly inefficient because the list was cleaned and
	repopulated each time a component was added or removed. Now it appends
	or removes the components one by one when it is needed using the new
	methods of ComponentList. Fixes #1276
	This also fixes a race condition given when some components were
	selected from the admin and one of them was deleted. The
	selection-changed event and the component-deleted listener method were
	triggered at the same time both cleaning and rebuilding the list.
	Another issue fixed on this commit is the deselection of a component
	of the list when a new one is loaded. This shouldn't happen anymore
	because the situation is controlled when the component is loaded.
	Fixes #1159
